# wot-esp-hal-demo

./: .gitignore  Cargo.toml  README.md  build.rs  rust-toolchain.toml
.cargo/: config.toml
bins/demo-c3/: Cargo.toml  build.rs
demo-c3/: Cargo.toml  build.rs
demo-c6/: Cargo.toml
demo-c6/src/: main.rs
lib/: Cargo.toml  build.rs
lib/src/: lib.rs  mdns.rs
src/: lib.rs  mdns.rs  smartled.rs
xtask/: Cargo.toml
xtask/src/: main.rs
