[package]
name = "wot-esp-hal-demo"
version = "0.1.0"
authors = [ "Luca Barbato <lu_zero@gentoo.org>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp-backtrace = { version = "0.15.0", features = [
    "esp32c3",
    "exception-handler",
    "panic-handler",
    "println",
]}

esp-hal = { version = "0.23.1", features = ["esp32c3"] }
esp-println = { version = "0.13.0", features = ["esp32c3", "log"] }
log = { version = "0.4.21" }
esp-alloc = { version = "0.6.0" }
embedded-io = "0.6.1"
shtcx = "1.0.0"

embedded-io-async = "0.6.1"
embassy-net = { version = "0.6.0", features = [ "tcp", "udp", "dhcpv4", "medium-ethernet"] }

esp-wifi = { version = "0.12.0", default-features = false, features = ["esp32c3", "utils", "wifi", "esp-alloc", "log"] }
heapless = { version = "0.8.0", default-features = false }
smoltcp = { version = "0.12.0", default-features = false, features = [
    "medium-ethernet",
    "proto-dhcpv4",
    "proto-ipv4",
    "socket-dhcpv4",
    "socket-icmp",
    "socket-raw",
    "socket-tcp",
    "socket-udp",
] }
embassy-executor = { version = "0.7.0",  features = ["nightly"] }
embassy-time     = { version = "0.4.0",  features = ["generic-queue-8"] }
embassy-futures = "0.1.1"
embassy-sync = "0.6.2"
esp-hal-embassy  = { version = "0.6.0",  features = ["esp32c3"] }
static_cell      = { version = "2.1.0",  features = ["nightly"] }
picoserve = { version = "0.13.3", features = ["embassy", "alloc"] }
wot-td = { version = "0.6.2", default-features = false, features = ["alloc"] }
serde_json = { version = "1.0.133", default-features = false, features = ["alloc"] }
uuid = { version = "1.11.0", default-features = false }
const-random = "0.1.15"
smart-leds-trait = { version = "0.3.0", features = ["serde"] }
smart-leds = { version = "0.4.0", features = ["serde"] }
serde = { version = "1.0.215", default-features = false, features = ["alloc"] }
portable-atomic = { version = "1.10.0", default-features = false }
edge-nal = "0.5.0"
edge-nal-embassy = "0.5.0"
edge-mdns = "0.5.0"

[patch.crates-io]
picoserve = { git = "https://github.com/lu-zero/picoserve", branch = "embassy-net-0.6" }

[features]
default = ["uuid-id"]
uuid-id = []

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false

[lints.clippy]
pedantic = "deny"
