
[package]
name = "demo-c3"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
wot-esp-thing = { workspace = true }

esp-backtrace = { workspace = true, features = ["esp32c3", "panic-handler", "println"] }
esp-bootloader-esp-idf = { workspace = true, features = ["esp32c3", "log-04"] }
esp-hal = { workspace = true, features = ["esp32c3", "unstable"] }
esp-println = { workspace = true, features = ["esp32c3", "log-04"] }
esp-alloc = { workspace = true }
esp-rtos = { workspace = true, features = ["esp32c3", "esp-radio", "embassy", "log-04"] }
esp-radio = { workspace = true, features = ["esp32c3"] }

embassy-executor = { workspace = true }
embassy-sync = { workspace = true }
embassy-time = { workspace = true }
picoserve = { workspace = true }
wot-td = { workspace = true }
shtcx = { workspace = true }
smart-leds = { workspace = true }
esp-hal-smartled = { workspace = true, features = ["esp32c3"] }
portable-atomic = { workspace = true }

serde_json = { workspace = true }
static_cell = { workspace = true }

[features]
default = ["wot-esp-thing/uuid-id"]
